--- a/frontend/pages/login/login.css
+++ b/frontend/pages/login/login.css
@@ -1,6 +1,12 @@
-/* Login Styles */
+/* ================================================ */
+/*  Navigation Bar */
+/* ================================================ */
+
+
+/* Import ========================================= */
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
 
+/* Reset ========================================== */
 * {
   box-sizing: border-box;
 }
@@ -9,35 +15,29 @@ body {
   margin: 0;
 }
 
+/* Code ============================================ */
 main {
-  background-color: rgba(255, 131, 131, 0.1);
-  font-family: 'Roboto', sans-serif;
+  /* background-color: rgba(255, 131, 131, 0.1); */
   color: #202124;
-  
-  height: 100vh;
-  width: 100%;
-
   display: flex;
     align-items: center;
-    /* flex-direction: column; */
     justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  height: 100vh;
+  width: 100%;
 }
 
-
-/* Login Left >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
+/* Login Left ====================================== */
 #main-left {
-  border: 1px dashed rgba(255, 131, 131, 0.5);
+  /* border: 1px dashed rgba(255, 131, 131, 0.5); */
   background-color: #ffffff;
-
-  height: 100%;
-  width: 40%;
-
-  padding: 6% 4%;
-
   display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
+  height: 100%;
+  padding: 6% 4%;
+  width: 40%;
 }
 
 #title, h2 {
@@ -57,44 +57,81 @@ label {
   margin-bottom: 4px;
 }
 
-#login-container input {
+input[type=email], input[type=password] {
+  border: 1px solid #dddddd; 
+  border-radius: 4px;
+  color: #202124;
+  height: 36px;
   margin-bottom: 10px;
   padding: 6px 10px;
-  height: 36px;
-  width: 100%;
-  color: #202124;
-
   outline: none;
-  border: 1px solid #eaeaea; 
-  /* border-color: black;
-  border-width: 1px; */
-  border-radius: 4px;
   transition: 100ms;
+  width: 100%;
 }
 
-#login-container input[type=submit] {
-  background-color: #1a73e8;
-  color: #ffffff;
-}
-
-#login-container input:focus {
+input:focus {
   border: 2px solid #1a73e8; 
   padding-left: 9px;
 }
 
-/* Login Right >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
+#spaceBetween {
+  display: flex;
+    align-items: center;
+    justify-content: space-between;
+  margin-top: 25px;
+}
+
+#signupLink {
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  color: #1a73e8;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+  height: 36px;
+  margin: auto 0;
+  text-decoration: none;
+  transition: 100ms;
+  width: 128px;
+}
+
+#signupLink:hover {
+  background-color: #f7f7f7;
+  box-shadow: 0px 4px 16px 0px rgba(228, 228, 228, 0.50)
+}
+
+input[type=submit] {
+  background-color: #1a73e8;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  color: #ffffff;
+  height: 36px;
+  transition: 100ms;
+  outline: none;
+  width: 80px;
+}
+
+input[type=submit]:hover {
+  background-color: #3181eb;
+  box-shadow: 0px 4px 16px 0px #3182eb3a;
+}
+
+/* Login Right ===================================== */
 #main-right {
-  border: 1px dashed rgba(255, 131, 131, 0.5);
+  /* border: 1px dashed rgba(255, 131, 131, 0.5); */
   background-color: rgba(255, 131, 131, 0.1);
-  /* background: url('virus.jpg'); */
   background: url('../../resources/login-1200px.png');
-  background-size: cover;
-  background-position: center;
+    background-size: 80%;
+    background-position: center;
+    background-repeat: no-repeat;
   width: 60%;
   height: 100%;
 }
 
-@media (max-width: 600px) {
+
+/* Media Queries =================================== */
+@media (max-width: 750px) {
   body {
     background-color: rgba(255, 0, 0, 0.1);
   }
