--- a/frontend/pages/login/login.css
+++ b/frontend/pages/login/login.css
@@ -1,5 +1,5 @@
 /* ================================================ */
-/*  Navigation Bar */
+/*  Login */
 /* ================================================ */
 
 
