--- a/frontend/pages/signup/signup.css
+++ b/frontend/pages/signup/signup.css
@@ -1,4 +1,12 @@
-/* Signup Styles */
+/* ================================================ */
+/*  Signup */
+/* ================================================ */
+
+
+/* Import ========================================= */
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
+
+/* Reset ========================================== */
 * {
   box-sizing: border-box;
 }
@@ -7,3 +15,132 @@ body {
   margin: 0;
 }
 
+/* Code ============================================ */
+main {
+  /* background-color: rgba(255, 131, 131, 0.1); */
+  color: #202124;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  height: 100vh;
+  width: 100%;
+}
+
+/* Login Left ====================================== */
+#main-left {
+  /* border: 1px dashed rgba(255, 131, 131, 0.5); */
+  background-color: #ffffff;
+  display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+  height: 100%;
+  padding: 6% 4%;
+  width: 40%;
+}
+
+#title, h2 {
+  font-weight: 500;
+}
+
+#login-brand, #login-container, #login-credit {
+  /* border: 1px dashed rgba(255, 131, 131, 0.5); */
+  background-color: #ffffff;
+  width: 100%;
+}
+
+label {
+  display: block;
+  font-size: 10px;
+  /* font-weight: bolder; */
+  margin-bottom: 4px;
+}
+
+input[type=text], input[type=email], input[type=password] {
+  border: 1px solid #dddddd; 
+  border-radius: 4px;
+  color: #202124;
+  height: 36px;
+  margin-bottom: 10px;
+  padding: 6px 10px;
+  outline: none;
+  transition: 100ms;
+  width: 100%;
+}
+
+input:focus {
+  border: 2px solid #1a73e8; 
+  padding-left: 9px;
+}
+
+#spaceBetween {
+  display: flex;
+    align-items: center;
+    justify-content: space-between;
+  margin-top: 25px;
+}
+
+#signupLink {
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  color: #1a73e8;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+  height: 36px;
+  margin: auto 0;
+  text-decoration: none;
+  transition: 100ms;
+  width: 128px;
+}
+
+#signupLink:hover {
+  background-color: #f7f7f7;
+  box-shadow: 0px 4px 16px 0px rgba(228, 228, 228, 0.50)
+}
+
+input[type=submit] {
+  background-color: #1a73e8;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  color: #ffffff;
+  height: 36px;
+  transition: 100ms;
+  outline: none;
+  width: 80px;
+}
+
+input[type=submit]:hover {
+  background-color: #3181eb;
+  box-shadow: 0px 4px 16px 0px #3182eb3a;
+}
+
+/* Login Right ===================================== */
+#main-right {
+  /* border: 1px dashed rgba(255, 131, 131, 0.5); */
+  background-color: rgba(255, 131, 131, 0.1);
+  background: url('../../resources/login-1200px.png');
+    background-size: 80%;
+    background-position: center;
+    background-repeat: no-repeat;
+  width: 60%;
+  height: 100%;
+}
+
+
+/* Media Queries =================================== */
+@media (max-width: 750px) {
+  body {
+    background-color: rgba(255, 0, 0, 0.1);
+  }
+
+  #main-left {
+    width: 100%;
+  }
+
+  #main-right {
+    display: none;
+  }
+}
