--- a/project/pages/login/login.css
+++ b/project/pages/login/login.css
@@ -15,13 +15,16 @@ body {
   margin: 0;
 }
 
+.center {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /* Code ============================================ */
 main {
   /* background-color: rgba(255, 131, 131, 0.1); */
   color: #202124;
-  display: flex;
-    align-items: center;
-    justify-content: center;
   font-family: 'Roboto', sans-serif;
   height: 100vh;
   width: 100%;
@@ -57,6 +60,10 @@ label {
   margin-bottom: 4px;
 }
 
+label span {
+  color: #ff0000;
+}
+
 input[type=email], input[type=password] {
   border: 1px solid #dddddd; 
   border-radius: 4px;
@@ -85,9 +92,6 @@ input:focus {
   border: 1px solid #dddddd;
   border-radius: 4px;
   color: #1a73e8;
-  display: flex;
-    align-items: center;
-    justify-content: center;
   height: 36px;
   margin: auto 0;
   text-decoration: none;
