--- a/project/pages/login/login.css
+++ b/project/pages/login/login.css
@@ -1,6 +1,15 @@
-/* ================================================ */
-/*  Login */
-/* ================================================ */
+
+/* login.css
+ * 
+ * Stylesheet for the login page.  
+ *
+ * Online Virus Check
+ * CS 174: Server-side Web Programming
+ * Professor Fabio Di Troia
+ * 
+ * Written by Jasmine Mai, Nhat Nguyen, and Albert Ong
+ * Revision 03.04.2019
+ */
 
 
 /* Import ========================================= */
@@ -21,7 +30,7 @@ body {
     justify-content: center;
 }
 
-/* Code ============================================ */
+/* Code ================================================ */
 main {
   /* background-color: rgba(255, 131, 131, 0.1); */
   color: #202124;
@@ -30,7 +39,7 @@ main {
   width: 100%;
 }
 
-/* Login Left ====================================== */
+/* Login Left ========================================== */
 #main-left {
   /* border: 1px dashed rgba(255, 131, 131, 0.5); */
   background-color: #ffffff;
@@ -43,9 +52,28 @@ main {
   width: 45%;
 }
 
-#title, h2 {
+
+/* Heading 1 and 2 ====================================== */
+h1 {
+  font-size: 3.5em; 
+  font-weight: bold;
+}
+h2 {
+  font-size: 1.6em;
   font-weight: 500;
 }
+
+/* Author text =========================================== */
+#authors {
+  font-size: 0.65em;
+  color: #999999;
+}
+
+/* Styles the titles for components ====================== */
+.component-title {
+  font-size: 1em;
+}
+
 
 #login-brand, #login-container, #login-credit {
   /* border: 1px dashed rgba(255, 131, 131, 0.5); */
