--- a/project/pages/user-login/login.css
+++ b/project/pages/user-login/login.css
@@ -129,13 +129,14 @@ input:focus {
 }
 
 .btn:hover {
-  background-color: #f7f7f7;
+  background-color: #dddddd;
   box-shadow: 0px 4px 16px 0px rgba(228, 228, 228, 0.50)
 }
 
 ::placeholder {
-  color: #696969;
+  color: #929292;
   font-size: 12px;
+  opacity: 1;
 }
 
 .btn-form {
