--- a/project/pages/user-login/login.css
+++ b/project/pages/user-login/login.css
@@ -129,7 +129,7 @@ input:focus {
 }
 
 .btn:hover {
-  background-color: #dddddd;
+  background-color: #f7f7f7;
   box-shadow: 0px 4px 16px 0px rgba(228, 228, 228, 0.50)
 }
 
