--- a/project/pages/admin-dashboard/dashboard.css
+++ b/project/pages/admin-dashboard/dashboard.css
@@ -33,13 +33,15 @@ h1 {
   font-weight: bold;
 }
 
-h2 {
-  font-size: 1.6em;
-  font-weight: bold;
-}
-
 form {
   width: 300px;
+}
+
+label {
+  display: block;
+  font-size: 1.6em;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
 p {
@@ -82,13 +84,21 @@ input {
   margin: 10px 0 10px 0;
 }
 
+.content-block:hover {
+  border: 5px solid rgb(124, 124, 124);
+}
+
 .content-block h1 {
   font-size: 1.5em;
   font-weight: bold;
-  margin: 0 0 5px 0;
+  margin: 0;
 }
 
 .content-block h2 {
-  margin: 0 0 10px 0;
+  margin: 0 0 6px 0;
   font-size: 12px;
+}
+
+.content-block p {
+  line-height: 1.5;
 }
