--- a/project/pages/admin-dashboard/dashboard.css
+++ b/project/pages/admin-dashboard/dashboard.css
@@ -73,15 +73,19 @@ input {
 }
 
 #content {
-  border: 1px solid grey;
   margin: 20px 0;
   width: 600px;
 }
 
 .content-block {
   background-color: #0000001c;
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, .1);
+  margin: 0 0 20px 0;
   padding: 10px 6% 10px 6%;
-  margin: 10px 0 10px 0;
+}
+
+.content-block:hover {
+  border: 5px solid rgb(124, 124, 124);
 }
 
 .content-block:hover {
